adicionei outro paragrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -10,5 +10,6 @@
     <h1>Hello World</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis eos fugiat nesciunt voluptatum, non reprehenderit vero delectus accusantium nam obcaecati mollitia iure saepe quis quasi, commodi maxime dicta debitis necessitatibus?</p>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Labore, unde quae. Quaerat animi tenetur, quasi natus quos ab rerum ad inventore quisquam recusandae aliquam molestias nemo temporibus placeat maiores magni.</p>
 </body>
 </html>
